[package]
name = "async-ops"
version = "1.1.0"
description = "Use std::ops traits with Futures"
repository = "https://github.com/saserr/async-ops"
documentation = "https://docs.rs/async-ops/"
license = "MIT OR Apache-2.0"
authors = ["Sanjin Sehic <saserr@gmail.com>"]
readme = "README.md"
keywords = ["future", "async", "await", "std"]
categories = ["asynchronous", "concurrency"]
edition = "2021"

[dependencies]
futures = "0.3"
paste = "1.0"
pin-project-lite = "0.2"

[dev-dependencies]
doc-comment = "0.3"
